[gd_scene load_steps=11 format=3 uid="uid://difxsr735tqsd"]

[ext_resource type="Script" path="res://scripts/level_runner.gd" id="1_0c2hq"]
[ext_resource type="PackedScene" uid="uid://dbbij5u3up0gx" path="res://scripts/enemy.tscn" id="2_iiij6"]
[ext_resource type="PackedScene" uid="uid://c8tq0ppoe2tb0" path="res://scripts/towerPlatform.tscn" id="3_qdug7"]
[ext_resource type="PackedScene" path="res://scripts/hud.tscn" id="4_7sajc"]
[ext_resource type="PackedScene" uid="uid://bx28qxjyu1vhn" path="res://scripts/level_setup.tscn" id="5_31mm1"]
[ext_resource type="PackedScene" uid="uid://b8p6r7fsli1iy" path="res://scripts/enemy_builder.tscn" id="6_rc30r"]
[ext_resource type="Script" path="res://scripts/ProgressBar.gd" id="9_axsi4"]

[sub_resource type="Curve2D" id="Curve2D_joiln"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 171, 3, 0, 0, 0, 0, 238, 203, 0, 0, 0, 0, 383, 284, 0, 0, 0, 0, 538, 320, 0, 0, 0, 0, 709, 360, 0, 0, 0, 0, 762, 451, 0, 0, 0, 0, 768, 571, 0, 0, 0, 0, 662, 636, 0, 0, 0, 0, 487, 677, 0, 0, 0, 0, 400, 726, 0, 0, 0, 0, 272, 809, 0, 0, 0, 0, 239, 887, 0, 0, 0, 0, 236, 996)
}
point_count = 13

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xqtni"]
size = Vector2(164, 85)

[sub_resource type="CanvasTexture" id="CanvasTexture_o4s4o"]

[node name="level_runner" type="Node2D"]
visibility_layer = 2
script = ExtResource("1_0c2hq")
enemyScene = ExtResource("2_iiij6")
towerPlatformScene = ExtResource("3_qdug7")
hudScene = ExtResource("4_7sajc")
levelSetupScene = ExtResource("5_31mm1")
enemyBuilderScene = ExtResource("6_rc30r")

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_joiln")

[node name="EnemySpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="EnemyDestination" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDestination"]
shape = SubResource("RectangleShape2D_xqtni")

[node name="Sprite2D" type="Sprite2D" parent="EnemyDestination"]
modulate = Color(1, 0, 1, 1)
scale = Vector2(198.5, 113.5)
texture = SubResource("CanvasTexture_o4s4o")

[node name="StartButton" type="Button" parent="."]
offset_left = 447.0
offset_top = 174.0
offset_right = 503.0
offset_bottom = 205.0
scale = Vector2(2, 2)
text = "Ready"

[node name="StartLabel" type="Label" parent="."]
offset_left = 331.0
offset_top = 108.0
offset_right = 444.0
offset_bottom = 134.0
scale = Vector2(3, 3)
text = "Sushi Attack"

[node name="ResetButton" type="Button" parent="."]
offset_left = 441.0
offset_top = 177.0
offset_right = 504.0
offset_bottom = 208.0
scale = Vector2(2, 2)
text = "Reset"

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 478.0
offset_top = 56.0
offset_right = 755.0
offset_bottom = 116.0
show_percentage = false
script = ExtResource("9_axsi4")

[node name="Label" type="Label" parent="ProgressBar"]
layout_mode = 0
offset_left = 91.0
offset_top = 18.0
offset_right = 142.0
offset_bottom = 44.0
text = "Wave: "

[connection signal="gameOver" from="." to="." method="_on_game_over"]
[connection signal="setupLevel" from="." to="." method="_on_setup_level"]
[connection signal="success" from="." to="." method="_on_success"]
[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="child_exiting_tree" from="EnemyPath" to="." method="_on_enemy_path_child_exiting_tree"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="area_entered" from="EnemyDestination" to="." method="_on_enemy_destination_area_entered"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ResetButton" to="." method="_on_reset_button_pressed"]
